--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,10 @@
         "commonjs": true,
         "es2021": true
     },
-    "extends": [
-        "prettier"
-    ],
-    "plugins": ["prettier"],
+    "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
     "rules": {
         "prettier/prettier": "error"
